src/objects/SuMo_PBS_Course__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.success__SuMo_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PBS_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <label>Origin Code</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Questions_Asked__c</fullName>
        <label>Questions Asked</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Method__c</fullName>
        <label>Registration Method</label>
        <picklist>
            <picklistValues>
                <fullName>Multi Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_in_On_Demand_Webcast_Mins__c</fullName>
        <label>Time in On-Demand Webcast (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Webcast_Mins__c</fullName>
        <label>Time in Webcast (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_E_Mail__c</fullName>
        <label>User E-Mail</label>
        <type>Email</type>
    </fields>
    <label>SuMo PBS Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PBS-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuMo PBS Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>